[bumpversion]
current_version = 0.5.2
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:hexpy/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:docs/mkdocs.yml]
search = version: {current_version}
replace = version: {new_version}

[metadata]
license_file = LICENSE

[flake8]
exclude = docs
ignore = E501

[aliases]
test = pytest

[bdist_wheel]
python-tag = py36

