[bumpversion]
current_version = 0.7.2
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/hexpy/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:docs/mkdocs.yml]
search = version: {current_version}
replace = version: {new_version}

[metadata]
license_file = LICENSE

[flake8]
exclude = docs
ignore = E501,W503,E203

[isort]
line_length = 88

[aliases]
test = pytest

[bdist_wheel]
python-tag = py36

[tool:pytest]
addopts = --cov-fail-under=80

[mypy]
python_version = 3.6
ignore_missing_imports = True
disallow_untyped_defs = True

